2009-03-22 Pierre Wieser <pwieser@trychlos.org>

	* data/.gitignore: Update .gitignore.

2009-03-17 Pierre Wieser <pwieser@trychlos.org>

	* data/Makefile.am: Automatically generate configurations schemas.

	* data/nautilus-actions.schemas.in:
	Renamed as data/nautilus-actions-prefs.schemas.in.
	Remove configurations schemas (now dynamically generated).

	* po/POTFILES.in: Updated accordingly.

	* src/core/na-icontextual-factory.c:
	* src/core/na-object-action-factory.c: Fix typo.

	* src/utils/nautilus-actions-schemas.c:
	Output configurations schemas to stdout.

	* po/POTFILES.skip:
	New file: do not try to translate dynamically generated schema.

	* Makefile.am:
	Build data/ after src/ to bo take advantage of dynamic generation of schemas.

	* src/core/na-icontextual-factory.c:
	String lists are now initialized in GConf-style.

	* src/io-gconf/nagp-writer.c (nagp_writer_write_data):
	* src/io-xml/naxml-writer.c (write_data_schema_v2, write_data_dump):
	Do not output empty values.

	* src/api/na-data-boxed.h:
	* src/core/na-data-boxed.c (na_data_boxed_is_set): New function.

	* data/nautilus-actions.schemas.in:
	Fix typo.
	Add io-providers/read-at-startup and io-providers/writable keys.

	* src/nact/nact.desktop.in: Add StartupNotify=true.

	* src/nact/nact-main-window.c (reload):
	Free the deleted list before filling the tree.

	* src/nact/nact-main-menubar.c
	(on_cut_activated): Do not cut not deletable items.
	(get_deletables): Add a ref on items to delete.

	* src/test/init-dispose-diff.sh:
	Do not take into account some debug messages.

2009-03-16 Pierre Wieser <pwieser@trychlos.org>

	* src/utils/nautilus-actions-new.c
	(output_to_dir): Output the new action to a file.

	* src/core/na-core-utils.c (info_dir_is_writable):
	Do not emit a warning on 'no such file or directory' error.

	* src/utils/nautilus-actions-new.c
	(output_to_stdout): Output the new action to stdout.
	(output_to_gconf): Output the new action to GConf.
